merge completed